# torch-spyre

./: pyproject.toml  setup.py  test_profiler_build.sh
RFCs/0663-KernelTileIR/: 0663-KernelTileIR-RFC.md
codegen/inputs/: Metadata.yaml
requirements/: build.txt  dev.txt  lint.txt  run.txt
tests/: test_ops.py
tests/_inductor/: test_inductor_ops.py
torch_spyre/: ops.py
torch_spyre/_inductor/: decompositions.py  lowering.py
torch_spyre/csrc/: CMakeLists.txt  spyre_mem.cpp
torch_spyre/csrc/profiler/: CMakeLists.txt  spyre_profiler.cpp
